modifiche apportate: - invio mail alla registrazione - implementato hash delle password - aggiunto il get dei coupon nella lista dei desideri - modifiche ai modelli del database - documentazione yaml aggiornata - file request.rest aggiornato - aggiunti commenti al codice - corretto bug del raggiungimento del limite giornaliero
